[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
glam = "0.24.2"
itertools = "0.12.0"
lazy_static = "1.4.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
pico-args = "0.5.0"
test-log = { version = "0.2.14", default-features = false, features = ["trace"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"]}
